OpenShiftDeployment/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: openshifttestapp-deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: OpenShiftTestApp
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: openshifttestapp-application-container
        image: #{Deployment.REGISTRY_HOSTNAME}#/openshifttestapp:#{Build.BuildId}#
        ports:
        - containerPort: 8080
      - name: openshifttestapp-database-container
        image: mcr.microsoft.com/mssql/rhel/server:2019-RC1
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: mssqldb
          mountPath: /var/opt/mssql
      volumes:
      - name: mssqldb
        persistentVolumeClaim:
          claimName: openshifttestapp-database-volume
      imagePullSecrets:
      - name: openshifttestapp-azure-private-registry-secret
